clean up files and complete desktop layout

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real Property Management Baton Rouge Orientation</title>
-    <link rel="stylesheet" href="css/app.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
@@ -15,7 +14,7 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   </head>
-  <body>
+  <body style="background-color:#bdc3c7;color:#002F65;">
     <div class="container text-center">
       <div class="row">
         <br/>
@@ -44,7 +43,7 @@
                   <input type="checkbox" required> Click here to indicate that you have watched and agree to the terms presented in the above orientation video.
                 </label>
               </div>
-              <button type="submit" class="btn btn-default">Confirm</button>
+              <button type="submit" class="btn btn-danger">Confirm</button>
             </div>
           </form>
         </div>
