--- a/index.html
+++ b/index.html
@@ -33,16 +33,18 @@
         <div class="row">
           <form action="http://formspree.io/alex@rpmbatonrouge.com" method="POST">
             <div class="col-md-8 col-md-offset-2">
-              <div class="form-group col-md-6">
-                <input type="text" name="name" class="form-control" id="exampleInputEmail1" placeholder="Full Name" required>
-              </div>
-              <div class="form-group col-md-6">
-                <input type="email" name="email" class="form-control" id="exampleInputPassword1" placeholder="Email" required>
-              </div>
-              <div class="checkbox">
-                <label>
-                  <input type="checkbox" name="checkbox" required> Click here to indicate that you have watched and agree to the terms presented in the above orientation video.
-                </label>
+              <div class="row">
+                <div class="form-group col-md-6">
+                  <input type="text" name="name" class="form-control" id="exampleInputEmail1" placeholder="Full Name" required>
+                </div>
+                <div class="form-group col-md-6">
+                  <input type="email" name="email" class="form-control" id="exampleInputPassword1" placeholder="Email" required>
+                </div>
+                <div class="checkbox">
+                  <label>
+                    <input type="checkbox" name="checkbox" required> Click here to indicate that you have watched and agree to the terms presented in the above orientation video.
+                  </label>
+                </div>
               </div>
               <button type="submit" class="btn btn-danger">Confirm</button>
             </div>
