--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <iframe src="https://player.vimeo.com/video/163715245?title=0&byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          <iframe src="https://player.vimeo.com/video/164490651" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         </div>
       </div>
       <br />
